@startuml
left to right direction

title Spectra Subgraph


'#####################################


enum AssetType {
    UNDERLYING
    IBT
    PT
    YT
    FYT
    LP
    UNKNOWN
}


enum TransactionType {
    FUTURE_VAULT_DEPOSIT
    FUTURE_VAULT_WITHDRAW
    AMM_ADD_LIQUIDITY
    AMM_REMOVE_LIQUIDITY
    AMM_REMOVE_LIQUIDITY_ONE
    AMM_EXCHANGE
}

enum AMM {
    CURVE
    UNISWAP_V3
    UNKNOWN
}

enum FutureState {
    ACTIVE
    PAUSED
    EXPIRED
}


'#####################################

class factory {
    id: ID!
    createdAtTimestamp: BigInt!
    address: Bytes!

    + old: factory
    + poolFactory: PoolFactory
}

class FeeClaim {
    id
    createdAtTimestamp
    amount

    + feeCollector
    + future
    + pool
}

class PoolFactory {
    id
    address
    createdAtTimestamp
    admin

    + factory
    + pools: [ ]
}

class Future {
    id
    address
    createdAtTimestamp
    expirationAtTimestamp
    symbol
    name
    daoFeeRate
    unclaimedFees
    totalCollectedFees
    totalAssets

    + feeClaims: [ ]
    + state
    + pools: [ ]
    + transactions: [ ]
    + underlyingAsset
    + ibtAsset
}

class Pool {
    id
    address
    createdAtTimestamp
    feeRate
    totalFees
    adminFeeRate
    totalAdminFees
    totalClaimedAdminFees
    futureAdminFeeRate
    futureAdminFeeDeadline

    + feeClaims: [ ]
    + factory
}

class Account {
    id
    address
    createdAtTimestamp

    + collectedFees: [ ]
    + transactions: [ ]
    + portfolio: [ ]
}

class Transaction {
    id
    address
    createdAtTimestamp
    block
    gas
    gasPrice
    fee
    adminFee

    + type
    + futureInTransaction
    + userInTransaction
    + poolInTransaction
    + amountsIn: [ ]
    + amountsOut: [ ]
}

class Asset {
    id
    address
    createdAtTimestamp
    name
    symbol
    decimals

    + price
    + type
    chainlinkPriceFeed
    + futureVault
    + underlying
    + fytTokenDetails
    + lpTokenDetails
}

class AccountAsset {
    id
    createdAtTimestamp
    balance

    + asset
    + user
    + pool
}

class AssetAmount {
    id
    createdAtTimestamp
    amount

    + asset
}

class AssetPrice {
    id
    createdAtTimestamp
    value

    + source
    + asset
}

class FYTTokenDetails {
    id
    createdAtTimestamp
    expirationAtTimestamp
    generatedYield
    generatedYieldValue
}

class LPTokenDetails {
    id
    createdAtTimestamp
    totalSupply

    + tokens: [ ]
}

class Transfer {
    id
    address
    createdAtTimestamp
    block
    gasLimit
    gasPrice

    + from: Account!
    + to: Account!
    + amountOut: AssetAmount!
}


'#####################################


AssetType --> Asset : type

TransactionType -> Transaction : type

FutureState -> Future : state

FeeClaim::feeCollector <---> Account : collectedFees
FeeClaim::future ---> Future::feeClaims : feeClaims
FeeClaim::pool ---> Pool : feeClaims

PoolFactory::factory --> factory::poolFactory : poolFactory
PoolFactory::pools --> Pool::factory : factory

factory ---> Pool::factory : factory
factory ---> Future::factory : factory

Future ---> factory::deployedFutures : deployedFutures
Future ---> Asset::futureVault : futureVault

Pool ---> AccountAsset : pool
Pool ---> factory::deployedPools : deployedPools

Account ---> Transfer::from : from
Account ---> Transfer::to : to

Transaction::future <---> Future::transactions : transactions
Transaction::userInTransaction <--> Account::transactions : transactions
Transaction::poolInTransaction <---> Pool::transactions : transactions

Asset ---> Future::underlyingAsset : underlyingAsset
Asset ---> Future::ibtAsset : ibtAsset
Asset ---> AccountAsset : asset
Asset --> AssetAmount : asset
Asset <--> AssetPrice : asset
Asset --> LPTokenDetails : tokens

AccountAsset <-> Account::portfolio : portfolio

AssetAmount --> Transaction::amountsIn : amountsIn
AssetAmount --> Transaction::amountsOut : amountsOut
AssetAmount --> Transfer::amountOut : amountOut

FYTTokenDetails --> Asset::fytTokenDetails : fytTokenDetails
LPTokenDetails --> Asset::lpTokenDetails : lpTokenDetails

@enduml